MR: improved Python FortranFile; adaptations for divergence shock diff; minor tweaks

--- a/samples/gpu_ism_ssd/src/astaroth/DSL/local/solve_two.ac
+++ b/samples/gpu_ism_ssd/src/astaroth/DSL/local/solve_two.ac
@@ -1,5 +1,7 @@
 #include "../prerequisites.h"
 
+//MR: needs to be generated automatically depending on the chosen physics
+
 auxiliary Field3 BETA_UU
 auxiliary Field3 BETA_AA
 auxiliary Field  BETA_RHO
@@ -20,21 +22,23 @@ output real aaz_initial_max
 
 output real rho_initial_max
 output real ss_initial_max
+
 //TP: tested to work on 10-apr-2025
 Kernel twopass_solve_intermediate(PC_SUB_STEP_NUMBER step_num, real dt) {
+
   df_uu  = duu_dt(step_num)
   df_aa  = daa_dt(step_num)
   df_rho = drho_dt(step_num)
   df_ss  = denergy_dt(step_num)
 
-  uu_error  = rkf4_error(df_uu  ,step_num,dt)
-  aa_error  = rkf4_error(df_aa  ,step_num,dt)
-  rho_error = rkf4_error(df_rho ,step_num,dt)
-  ss_error  = rkf4_error(df_ss  ,step_num,dt)
+  uu_error  = rkf4_error(df_uu ,step_num,dt)
+  aa_error  = rkf4_error(df_aa ,step_num,dt)
+  rho_error = rkf4_error(df_rho,step_num,dt)
+  ss_error  = rkf4_error(df_ss ,step_num,dt)
  
   maximum_error = 0.0
   //TP: nothing to cumulate for the first substep
-  if(step_num!=0)
+  if (step_num!=0)
   {
         uu_error  += ERROR_UU
         aa_error  += ERROR_AA
@@ -44,7 +48,7 @@ Kernel twopass_solve_intermediate(PC_SUB_STEP_NUMBER step_num, real dt) {
   //TP: done since e.g. UU stores now the initial state which beta update should read from
   //For subsequent steps it should read from itself
   //Last step is skipped since we want the beta version to finally end up in the 'proper' registers
-  if(step_num == 0)
+  if (step_num == 0)
   {
         write(BETA_UU ,rkf4_beta(UU ,df_uu ,step_num,dt))
         write(BETA_AA ,rkf4_beta(AA ,df_aa ,step_num,dt))
@@ -63,7 +67,7 @@ Kernel twopass_solve_intermediate(PC_SUB_STEP_NUMBER step_num, real dt) {
 	reduce_max(max(AC_dt_ratio*abs(RHO),AC_dt_epsi), rho_initial_max)
 	reduce_max(max(AC_dt_ratio*abs(SS),AC_dt_epsi),  ss_initial_max)
   }
-  else if(step_num != 4)
+  else if (step_num != 4)
   {
         write(BETA_UU ,rkf4_beta(BETA_UU ,df_uu ,step_num,dt))
         write(BETA_AA ,rkf4_beta(BETA_AA ,df_aa ,step_num,dt))
@@ -73,7 +77,7 @@ Kernel twopass_solve_intermediate(PC_SUB_STEP_NUMBER step_num, real dt) {
   //Until the last step the 'proper' registers hold the alpha updates
   //Except in the last one we overwrite them with the beta update
   //No need to write the error out for the last substep
-  if(step_num != 4)
+  if (step_num != 4)
   {
         write(UU ,rkf4_alpha(UU ,df_uu ,step_num,dt))
         write(AA ,rkf4_alpha(AA ,df_aa ,step_num,dt))
@@ -97,8 +101,6 @@ Kernel twopass_solve_intermediate(PC_SUB_STEP_NUMBER step_num, real dt) {
 	write(RHO,rho_final)
 	write(SS ,ss_final)
 	
-	//TP: using dt_epsi instead of the initial maximums give the same answer on a small test problem
-        //TP: but for completeness have the other scheme here
         real scal = max(abs(uu_final.x),uux_initial_max)
         maximum_error = max(abs(uu_error.x/scal),maximum_error)
         scal = max(abs(uu_final.y),uuy_initial_max)
@@ -116,6 +118,9 @@ Kernel twopass_solve_intermediate(PC_SUB_STEP_NUMBER step_num, real dt) {
         scal = max(abs(ss_final),ss_initial_max)
         maximum_error = max(abs(ss_error/scal),maximum_error)
   	reduce_max(maximum_error,AC_maximum_error)
+
+	//TP: using dt_epsi instead of the initial maxima gives the same answer on a small test problem
+        //TP: but for completeness have the other scheme here on comment
 	/**
         scal = max(abs(uu_final.x),AC_dt_epsi)
         maximum_error = max(abs(uu_error.x/scal),maximum_error)
@@ -146,7 +151,7 @@ Kernel twopass_solve_intermediate(PC_SUB_STEP_NUMBER step_num, real dt) {
 //}
 
 fixed_boundary Kernel twopass_solve_final(int step_num){
-  if(lcourant_dt)
+  if (lcourant_dt)
   {
   	write( UU, rk3_final(previous(UU), value(UU), step_num) )
   	write( RHO, rk3_final(previous(RHO), value(RHO), step_num) )
