refactor rkf4 DSL code to be more compact (which fortunately is also the more performant formulation); No need to pass the GPU_VENDOR anymore when using Astaroth: The possible vendors are searched with CMake with preference for CUDA

--- a/samples/gpu_ism_ssd/src/Makefile.local
+++ b/samples/gpu_ism_ssd/src/Makefile.local
@@ -8,7 +8,6 @@ FSTD=     =  file_io_f2003
 MPICOMM   =   mpicomm
 IO        =   io_dist
 GPU       =   gpu_astaroth
-GPU_VENDOR = amd
 HYDRO     =   hydro
 DENSITY   =   density
 MAGNETIC  =   magnetic
@@ -22,6 +21,7 @@ MULTITHREADING = openmp
 INTERSTELLAR =   interstellar
 
 FORCING      = noforcing
-
+TIMESTEP = timestep_rkf_lowsto
 POWER        = nopower_spectrum
 REAL_PRECISION = double
+RUNTIME_COMPILATION=on
