--- a/samples/gpu_ism_ssd/run.in
+++ b/samples/gpu_ism_ssd/run.in
@@ -5,7 +5,8 @@
 &run_pars
   cvsid="8a1dc9355"
   !nt=250000, it1=250, isave=5000, it1d=2500, itorder=3, tmax=0.05, dtmin=1e-10
-  nt=300, it1=20, isave=1000, it1d=5000, itorder=3, tmax=0.005, dtmin=1e-12, dt=1e-10
+  nt=300, it1=1, isave=1000, it1d=5000, itorder=4, tmax=0.005, dtmin=1e-12!, dt=1e-10
+  dt_epsi=1e-12
   !dt=1e-8, dtdec=0.5, dtinc=0.5, dt_ratio=1e-2
   !leps_fixed=T
   !eps_rkf0=0.01
@@ -74,4 +75,6 @@
   shock_div_pow=1.75
   dtfactor=0.2!2.5e-2
   con_bias=0.05
+/
+&gpu_run_pars
 /
