Update Puhti config to enable building larger (512^3) subdomains

--- a/config/hosts/puhti/host-puhti-login1.bullx-GNU_Linux.conf
+++ b/config/hosts/puhti/host-puhti-login1.bullx-GNU_Linux.conf
@@ -7,9 +7,10 @@
 %section Makefile
 
 	# turn on hardware optimizations
-	FFLAGS += -llibrary -march=native -I${HDF5_INSTALL_ROOT}/include -g  -ffree-line-length-none
-	LDFLAGS += -ldl 
-	CFLAGS += -O2
+	FFLAGS += -llibrary -march=native -I${HDF5_INSTALL_ROOT}/include -g  -ffree-line-length-none -fPIC
+	FFLAGS += -mcmodel=large
+	CFLAGS += -O2 -fPIC
+	LDFLAGS += -ldl -Wl,--no-relax
 %endsection Makefile
 
 %section runtime
