--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -3159,6 +3159,7 @@ endif
 ifeq ($(MAGNETIC_MEANFIELD),magnetic/nomeanfield)
 	@grep 'magnetic\/nomeanfield\.f90' $(CUDA_MAKEDIR)/PC_modulesources.h > /dev/null || echo $(CUDA_RELPATH)'/$(MAGNETIC_MEANFIELD).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
 endif
+	@echo $(CUDA_RELPATH)'/$(SPECIAL).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
 ifeq ($(GRAVITY),nogravity)
 	@echo $(CUDA_RELPATH)'/$(GRAVITY).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
 endif
@@ -3167,6 +3168,9 @@ ifeq ($(HYDRO),nohydro)
 endif
 ifeq ($(DENSITY),nodensity)
 	@echo $(CUDA_RELPATH)'/$(DENSITY).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
+endif
+ifeq ($(CHEMISTRY),nochemistry)
+	@echo $(CUDA_RELPATH)'/$(CHEMISTRY).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
 endif
 ifeq ($(MAGNETIC),nomagnetic)
 	@grep nomagnetic\.f90 $(CUDA_MAKEDIR)/PC_modulesources.h > /dev/null || echo $(CUDA_RELPATH)'/$(MAGNETIC).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
